mobile overflow fix?

--- a/ritual-of-forgetting/main.css
+++ b/ritual-of-forgetting/main.css
@@ -53,6 +53,7 @@ img {
   height:100%;
   width:100%;
   /* padding:5px; */
+  overflow: hidden;
 }
 
 .thermosphere {
